refactor: remove Kotlin scanning support